# tradecalendar-rs

./: .gitignore  Cargo.toml  LICENSE  calendar.csv  holidays.csv  readme.md  update.cmd  xmake.lua  交易日历维护.md  交易日维护.md
examples/: calendar.csv  ex1.rs
src/: calendar_helper.rs  common.rs  lib.rs  tradecalendar.rs
tradecalendar-rs/: Cargo.toml  calendar.csv  holidays.csv
tradecalendar-rs/examples/: calendar-update.rs  ex1.rs  test_db.rs
tradecalendar-rs/examples/calendar-update/: calendar_helper.rs  main.rs
tradecalendar-rs/src/: calendar_helper.rs  common.rs  db_clickhouse.rs  db_helper.rs  db_odbc.rs  db_sqlx.rs  lib.rs  tradecalendar.rs
tradecalendar-rs/src/jcswitch/: mod.rs  tm_chrono.rs  tm_jiff.rs
tradecalendar-rs/src/tests/: mod.rs  test_1.rs  test_3.rs  test_db.rs
tradecalendar-rs/src/time_helper/: mod.rs  tm_chrono.rs  tm_jiff.rs
tradecalendarpp/: Cargo.toml  build.rs
tradecalendarpp/src/: lib.rs  tradecalendarpp.rs
tradecalendarpy/: Cargo.toml  pyproject.toml  testpy.py  tradecalendarpy.pyi
tradecalendarpy/src/: lib.rs
