[package]
edition = "2021"
name = "tradecalendar"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
chrono = {version = "*", features = ["serde"]}
clap = "*"
csv = "*"
encoding_rs_io = "*"
log = "*"
serde = {version = '*', features = ["derive"]}
# serde_json = "*"

[dev-dependencies]
crossbeam-channel = "*"
ctrlc = "*"
