[package]
edition = "2021"
name = "tradecalendar"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["with-jiff"]
default = ["with-chrono"]
with-chrono = ["chrono"]
with-jiff = ["jiff"]

# cargo build --features "with-jiff"
# cargo build --features "with-chrono" --no-default-features
# in Cargo.toml, should use "default-features = false"

[dependencies]
anyhow = "*"
chrono = { version = "*", features = ["serde"], optional = true }
jiff = { version = "*", features = ["serde"], optional = true }
clap = "*"
csv = "*"
encoding_rs_io = "*"
log = "*"
serde = { version = '*', features = ["derive"] }
# serde_json = "*"
connectorx = { version = "0.3.3", features = [
    "src_mysql",
    # "src_mssql",
    "src_postgres",
    "src_sqlite",
    "dst_arrow",
] }
# 注意: 这个version必须要跟connectorx引用的arrow版本一致
# 从connectorx项目的Cargo.toml文件里面获取
arrow = { version = "46.0.0" }


[dev-dependencies]
crossbeam-channel = "*"
ctrlc = "*"
