[package]
edition = "2024"
name = "tradecalendar"
version = "0.1.3"
authors = ["Shawn Liu <shawn666.liu@hotmail.com>"]
description = "中国市场期货股票交易日历"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["with-jiff"]
default = ["with-chrono"]
with-chrono = ["chrono"]
with-jiff = ["jiff"]

# support for jiff removed!!! since sqlx supports chrono only
# cargo build --features "with-jiff"
# cargo build --features "with-chrono" --no-default-features
# in Cargo.toml, should use "default-features = false"

[dependencies]
anyhow = "*"
chrono = { version = "^0.4", features = ["serde"], optional = true }
clickhouse = { version = "0.13.1" }
csv = "*"
encoding_rs_io = "*"
jiff = { version = "*", features = ["serde"], optional = true }
log = "*"
odbc-api = "14.2.1"
serde = { version = '*', features = ["derive"] }
tokio = { version = "^1.47", features = ["rt-multi-thread"] }
sqlx = { version = "^0.8", features = [
    "mysql",
    "postgres",
    "chrono",
    "runtime-tokio",
] }

[dev-dependencies]
clap = "*"
crossbeam-channel = "*"
ctrlc = "*"
