[package]
name = "tradecalendarpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tradecalendarpy"
crate-type = ["cdylib"]

[dependencies]
anyhow = "*"
tradecalendar = { version = "*", path = "../tradecalendar-rs" }
pyo3 = { version = "0.22.2", features = ["extension-module"] }
